--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,12 +3,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.backloginsurmountable.MainActivity">
+    tools:context="com.example.backloginsurmountable.MainActivity"
+    android:background="#d9d9d9">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView"
+        android:src="@drawable/nes_splash"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:scaleType="centerCrop"
+        android:foregroundTintMode="add"
+        android:foregroundTint="#383838" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:text="Profile"
         android:id="@+id/button"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
@@ -20,7 +33,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:text="Gauntlet"
         android:id="@+id/button2"
         android:layout_above="@+id/button"
         android:layout_alignParentLeft="true"
@@ -32,7 +45,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:text="Backlog"
         android:id="@+id/button3"
         android:layout_above="@+id/button2"
         android:layout_alignParentLeft="true"
@@ -48,7 +61,7 @@
         android:text="Backlog"
         android:id="@+id/textView_Backlog"
         android:layout_marginTop="151dp"
-        android:textSize="45sp"
+        android:textSize="90sp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
@@ -59,6 +72,7 @@
         android:text="Insurmountable"
         android:id="@+id/textView_Insurmountable"
         android:layout_below="@+id/textView_Backlog"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:textSize="43sp" />
 
 </RelativeLayout>
