implement OnClickListener interface in Main and attach nehavior for backlog button

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Profile"
-        android:id="@+id/button"
+        android:id="@+id/button_Profile"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -34,8 +34,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Gauntlet"
-        android:id="@+id/button2"
-        android:layout_above="@+id/button"
+        android:id="@+id/button_Gauntlet"
+        android:layout_above="@+id/button_Profile"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
@@ -46,8 +46,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Backlog"
-        android:id="@+id/button3"
-        android:layout_above="@+id/button2"
+        android:id="@+id/button_Backlog"
+        android:layout_above="@+id/button_Gauntlet"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
