--- a/app/src/main/res/layout/activity_backlog.xml
+++ b/app/src/main/res/layout/activity_backlog.xml
@@ -22,8 +22,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/listView_NESGameList"
         android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="84dp" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
