--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Profile"
+        android:text="Sign Up / Log In"
         android:id="@+id/button_Profile"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
