--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -15,7 +15,8 @@
         android:layout_alignParentStart="true"
         android:scaleType="centerCrop"
         android:foregroundTintMode="add"
-        android:foregroundTint="#383838" />
+        android:foregroundTint="#383838"
+        android:background="#ff0000" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -48,4 +49,17 @@
         android:layout_alignLeft="@+id/editText4"
         android:layout_alignStart="@+id/editText4"
         android:checked="true" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Let&apos;s Go"
+        android:id="@+id/button"
+        android:layout_below="@+id/checkBox"
+        android:layout_alignLeft="@+id/checkBox"
+        android:layout_alignStart="@+id/checkBox"
+        android:layout_alignRight="@+id/editText4"
+        android:layout_alignEnd="@+id/editText4"
+        android:background="@color/accent_material_light" />
 </RelativeLayout>
