--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,8 +21,20 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sign Up / Log In"
+        android:text="Profile"
         android:id="@+id/button_Profile"
+        android:background="#ff0000"
+        android:layout_alignBottom="@+id/button_SignUp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Sign Up / Log In"
+        android:id="@+id/button_SignUp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
@@ -35,7 +47,7 @@
         android:layout_height="wrap_content"
         android:text="Gauntlet"
         android:id="@+id/button_Gauntlet"
-        android:layout_above="@+id/button_Profile"
+        android:layout_above="@+id/button_SignUp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_alignParentRight="true"
