--- a/app/src/main/res/layout/activity_backlog.xml
+++ b/app/src/main/res/layout/activity_backlog.xml
@@ -46,10 +46,10 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="NUM"
         android:id="@+id/textView_Remaining"
+        android:textSize="20sp"
         android:layout_below="@+id/textView_RemainingHeader"
-        android:layout_alignLeft="@+id/textView_RemainingHeader"
-        android:layout_alignStart="@+id/textView_RemainingHeader"
-        android:textSize="20sp" />
+        android:layout_alignRight="@+id/textView_RemainingHeader"
+        android:layout_alignEnd="@+id/textView_RemainingHeader" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -71,10 +71,10 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="NUM"
         android:id="@+id/textView_Completed"
+        android:textSize="20sp"
         android:layout_below="@+id/textView_CompletedHeader"
-        android:layout_alignRight="@+id/textView_CompletedHeader"
-        android:layout_alignEnd="@+id/textView_CompletedHeader"
-        android:textSize="20sp" />
+        android:layout_alignLeft="@+id/textView_CompletedHeader"
+        android:layout_alignStart="@+id/textView_CompletedHeader" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -83,7 +83,7 @@
         android:text="NUM"
         android:id="@+id/textView_PercentCompleted"
         android:textSize="19sp"
-        android:layout_below="@+id/textView_Completed"
+        android:layout_below="@+id/textView_Remaining"
         android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
