--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -13,6 +13,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:scaleType="centerCrop"
+        android:src="@drawable/profile_splash_orange"
         android:foregroundTintMode="add"
         android:foregroundTint="#383838" />
 
