--- a/app/src/main/res/layout/activity_backlog.xml
+++ b/app/src/main/res/layout/activity_backlog.xml
@@ -2,8 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.backloginsurmountable.BacklogActivity">
+    android:layout_height="wrap_content"
+    tools:context="com.example.backloginsurmountable.ui.BacklogActivity">
 
     <ImageView
         android:layout_width="match_parent"
@@ -27,15 +27,7 @@
         android:layout_alignParentStart="true"
         android:background="#78ffffff"/>
 
-    <!--<ListView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:id="@+id/listView_NESGameList"-->
-        <!--android:layout_marginTop="39dp"-->
-        <!--android:layout_below="@+id/textView_Completed"-->
-        <!--android:layout_alignParentLeft="true"-->
-        <!--android:layout_alignParentStart="true"-->
-        <!--android:background="#78ffffff" />-->
+
 
     <TextView
         android:layout_width="wrap_content"
