--- a/app/src/main/res/layout/fragment_game_detail.xml
+++ b/app/src/main/res/layout/fragment_game_detail.xml
@@ -21,4 +21,12 @@
         android:text="Genre"
         android:id="@+id/textView_Genre"
         android:layout_gravity="center" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Deck"
+        android:id="@+id/textView_Deck"
+        android:layout_gravity="center_horizontal|bottom" />
 </FrameLayout>
