change fragment_game_detail to relative layout and set transparent background of box art.

--- a/app/src/main/res/layout/fragment_game_detail.xml
+++ b/app/src/main/res/layout/fragment_game_detail.xml
@@ -1,4 +1,4 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -6,13 +6,27 @@
 
     <!-- TODO: Update blank fragment layout -->
 
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:alpha=".10"
+        android:adjustViewBounds="true"
+        android:scaleType="fitCenter"
+        android:id="@+id/imageView_Splash"
+        android:layout_gravity="center_horizontal|top"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentTop="true"
+        />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Genre"
         android:id="@+id/textView_Genre"
-        android:layout_gravity="center" />
+        android:layout_gravity="center"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="160dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -20,11 +34,9 @@
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Deck"
         android:id="@+id/textView_Deck"
-        android:layout_gravity="center_horizontal|bottom" />
+        android:layout_gravity="center_horizontal|bottom"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="286dp" />
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView_Splash"
-        android:layout_gravity="center_horizontal|top" />
-</FrameLayout>
+</RelativeLayout>
