--- a/app/src/main/res/layout/activity_backlog.xml
+++ b/app/src/main/res/layout/activity_backlog.xml
@@ -18,8 +18,8 @@
         android:foregroundTint="#383838" />
 
     <android.support.v7.widget.RecyclerView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:id="@+id/listView_NESGameList"
         android:layout_marginTop="39dp"
         android:layout_below="@+id/textView_Completed"
