--- a/app/src/main/res/layout/fragment_game_detail.xml
+++ b/app/src/main/res/layout/fragment_game_detail.xml
@@ -37,6 +37,7 @@
         android:layout_gravity="center_horizontal|bottom"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="286dp" />
+        android:layout_marginBottom="286dp"
+        android:textAlignment="center" />
 
 </RelativeLayout>
