--- a/app/src/main/res/layout/game_list_item.xml
+++ b/app/src/main/res/layout/game_list_item.xml
@@ -6,7 +6,6 @@
     <RelativeLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:background="#ffffff"
         android:layout_height="wrap_content"
         android:padding="10dp">
 
@@ -17,17 +16,10 @@
             android:textSize="20dp"
             android:textStyle="bold"
             android:text="Game Name"
-            android:textColor="@color/colorPrimary"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Genre"
-            android:id="@+id/textView_Genre"
-            android:layout_below="@+id/textView_Name"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:textStyle="italic"/>
+            android:textColor="@color/colorPrimary"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:textAlignment="center" />
 
         <!--<RelativeLayout-->
             <!--android:layout_width="match_parent"-->
