--- a/app/src/main/res/layout/activity_backlog.xml
+++ b/app/src/main/res/layout/activity_backlog.xml
@@ -21,10 +21,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/listView_NESGameList"
-        android:layout_marginTop="39dp"
+        android:layout_marginTop="68dp"
         android:layout_below="@+id/textView_Completed"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:paddingTop="10dp"
         android:background="#78ffffff"/>
 
 
@@ -87,5 +88,13 @@
         android:textSize="19sp"
         android:layout_below="@+id/textView_Remaining"
         android:layout_centerHorizontal="true" />
+
+    <SearchView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/searchView"
+        android:layout_below="@id/textView_PercentCompleted"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
