--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProfileActivity">
+    tools:context=".ui.ProfileActivity">
 
     <ImageView
         android:layout_width="match_parent"
@@ -13,6 +13,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:scaleType="centerCrop"
+        android:alpha=".20"
         android:src="@drawable/profile_splash_orange"
         android:foregroundTintMode="add"
         android:foregroundTint="#383838" />
